greencharge/sdk-manifests/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greencharge
  namespace: enact
  labels:
    app.kubernetes.io/name: greencharge
    app.kubernetes.io/instance: greencharge
    app.kubernetes.io/version: 1.0
    app.kubernetes.io/component: service
    app.kubernetes.io/managed-by: enact-apm
    app: greencharge
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app.kubernetes.io/name: greencharge
      app.kubernetes.io/instance: greencharge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: greencharge
        app.kubernetes.io/instance: greencharge
        app.kubernetes.io/version: 1.0
        app.kubernetes.io/component: service
        app.kubernetes.io/managed-by: enact-apm
        app: greencharge
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: greencharge
        image: greencharge:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
