greencharge/sdk-manifests/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greencharge
  namespace: enact
  labels:
    app.kubernetes.io/name: greencharge
    app.kubernetes.io/instance: greencharge
    app.kubernetes.io/version: 1.0
    app.kubernetes.io/component: service
    app.kubernetes.io/managed-by: enact-apm
    app: greencharge
spec:
  rules:
  - host: greencharge.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: greencharge
            port:
              number: 8080
